Pagina usando solo html

--- a/AcercaDe.html
+++ b/AcercaDe.html
@@ -17,8 +17,11 @@
         <h1 align = "center">La cocina de Juan</h1>
     </header>
 
-    <main>
-
+    <main align = "center">
+        <h3 align = "left">Acerca de</h3>
+        <img width = 500 src="./imagenes/chef.jpg" alt="chef">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <br>
+            Veniam nam eum maiores impedit error eius deserunt fugiat suscipit, libero atque, exercitationem ratione, itaque omnis temporibus recusandae alias corporis incidunt quaerat?</p>
     </main>
 
     <footer align = " center" style="background-color: darkorange;">
