--- a/Contacto.html
+++ b/Contacto.html
@@ -18,7 +18,19 @@
     </header>
 
     <main>
-
+        <h3 align = "left">Conctacto</h3>
+        <p>Enviame tus sugerencia de receta a mi correo: ejemplo@gmail.com</p>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        
     </main>
 
     <footer align = " center" style="background-color: darkorange;">
