--- a/index.html
+++ b/index.html
@@ -18,8 +18,11 @@
     </header>
 
     <main align = "center">
-        <h4 align = "left">Sopa crema de calabaza</h4>
-        <img width = 500 src="./imagenes/descarga.jpg" alt="sopa">
+
+        <h3 align = "left">Sopa crema de calabaza</h3>
+        <img width = 500 src="./imagenes/descarga.jpg" alt="sopa"><br>
+        <a href="receta.html" style="background-color: greenyellow;">Receta</a> 
+
     </main>
 
     <footer align = " center" style="background-color: darkorange;">
