--- a/receta.html
+++ b/receta.html
@@ -20,6 +20,8 @@
     <main align = "center">
         <h3 align = "left">Sopa crema de calabaza</h3>
         <img width = 500 src="./imagenes/descarga.jpg" alt="sopa">
+        <p>Preparación: Lavar y pelar la calabaza,cortarla en trozos grandes</p>
+        <p>Colocar una olla con el agua, el laurel, apio, sal y la calabaza</p>
     </main>
 
     <footer align = " center" style="background-color: darkorange;">
